# 1DHeatConduction

./: CMakeLists.txt  README.md  input.json  libheat_conduction_solver.dylib  output.txt
cpp_execute/: heat_conduction
include/: api.h  input.h  main.h  makeMatrixEquation.h  meshGeneration.h  solver.h
pythonScripts/: Numerical_Solution.csv  analytical_solution.csv  input.json  midResidual.csv  plot.py  run_simulation.py
src/: api.cpp  input.cpp  main.cpp  makeMatrixEquation.cpp  meshGeneration.cpp  solver.cpp
